# Agion-LangGraph

./: .dockerignore  .gitignore  AGION_SDK_INTEGRATION.md  CLAUDE.md  DEPENDENCY_UPDATES.md  Dockerfile.backend.prod  Dockerfile.backend.python313  Dockerfile.frontend.prod  FEEDBACK_SYSTEM_SUMMARY.md  FEEDBACK_UI_IMPLEMENTATION.md  PYTHON_VERSION_POLICY.md  README.md  SDK_TESTING_GUIDE.md  TRUST_SCORE_ARCHITECTURE.md  deploy-to-aks.sh  k8s-deployment.yaml  nginx.conf
agion-sdk-python/: ARCHITECTURE.md  BACKEND_INTEGRATION.md  CHANGELOG.md  CONNECTION_SUMMARY.md  QUICKSTART.md  README.md  SDK_IMPLEMENTATION_SUMMARY.md  TRUST_SCORING_SDK_INTEGRATION_GUIDE.md  UNIFIED_GOVERNANCE_SDK_INTEGRATION_GUIDE.md  USAGE.md  pyproject.toml
agion-sdk-python/agion_sdk/: __init__.py  decorators.py  events.py  exceptions.py  governance_client.py  governance_models.py  policy_engine.py  policy_sync.py  types.py
agion-sdk-python/examples/: langgraph_example.py  mission_coordination.py  requirements.txt
agion-sdk-python/scripts/: test_connectivity.sh
agion-sdk-python/tests/: __init__.py  conftest.py  test_backend_connectivity.py  test_integration.py
backend/: .env.example  .env.production.backup  .env.production.database  .env.production.example  .gitignore  AGION-SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.2025  Dockerfile.aks  Dockerfile.azure  Dockerfile.minimal  Dockerfile.production  add-storage-to-existing.sh  azure-deploy.yaml  check_python_version.py  configure-existing-app.sh  create_kazakhstan_data.py  docker-compose.azure.yml  init_database.py  install_latest.sh  main.py  migrate_blob_to_filesystem.py  models.py  models_old_backup.py  requirements-2025.txt  requirements-minimal.txt  requirements.txt  (+13 more)
(+154 files in other folders)
