[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agion-sdk"
version = "0.1.0"
description = "Lightweight SDK for Agion agent governance, missions, and trust management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Agion Team"}
]
keywords = ["agion", "agents", "governance", "langgraph", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "redis>=6.4.0",
    "aiohttp>=3.12.15",
    "pydantic>=2.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.13.2",
    "mypy>=1.18.2",
]

[project.urls]
Homepage = "https://github.com/agion/agion-sdk-python"
Documentation = "https://docs.agion.ai/sdk"
Repository = "https://github.com/agion/agion-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["agion_sdk*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
